Unify build into single gradle file (#280)
* Unify build into single gradle file
* update google java format plugin version
* update to gradle 4.9 and related fixes to tests
* update gradle version requirement in README